src/test/deca/context/invalid/this.deca
// Description:
//    Selection dans main protected
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class A{
    void p() {}
}
{
    this.a=4;

}